# probable-chainsaw

./: .gitignore  new_wasp_prompt.md
Game_Planning/: AGENTS.md  PROJECT_ROADMAP.md  README.md
Game_Planning/01_Narrative_Design/: Final Reveal Message.md  Hint_Philosophy.md  Joy's Interests and Themes.md  Narrative_Bible.md  Plot_Arc_and_Guide_Voice.md  Riddle Writing Guide.md  Scavenger Hunt - Core Concept.md  Starting Letter Options.md
Game_Planning/02_Riddle_Content/: Answer-Based Riddle Examples.md  Clue_and_Hint_Structure.md  Final Riddle Template.md  Riddle_Flow_Map.md
Game_Planning/04_Physical_Production/: Contingency Plans.md  Crafting_Plan.md  Materials Shopping List.md  Placement_Map.md  Safety_and_Backup_Notes.md  Setup and Testing Guide.md
Game_Planning/05_Testing_and_Execution/: Backup Hints and Help.md  Day-Of Checklist.md  Execution_Guide.md  (+3 more)
Game_Planning/crew_ai/workspace/: README.md  pyproject.toml
Game_Planning/crew_ai/workspace/src/workspace/: crew.py  main.py
Game_Planning/crew_ai/workspace/src/workspace/config/: agents.yaml  hint_audit.yaml  tasks.yaml
Game_Planning/crew_ai/workspace/src/workspace/tools/: __init__.py  connection_map_tool.py  context_pack_tool.py  doc_patch_tool.py  evaluate_riddle_tool.py  physical_plan_tool.py  placement_update_tool.py  riddle_prompt_tool.py  roadmap_note_tool.py  sequencing_analyzer_tool.py  testing_note_tool.py  variation_tool.py
app/: AGENTS.md  docker-compose.dev.yml  main.wasp  package-lock.json  package.json  schema.prisma  tailwind.config.js  tsconfig.json  vitest.config.ts  vitest.setup.ts
(+128 files in other folders)
