[project]
name = "workspace"
version = "0.1.0"
description = "workspace using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.4.1",
    "litellm>=1.42.0"
]

[project.scripts]
workspace = "workspace.main:run"
run_crew = "workspace.main:run"
train = "workspace.main:train"
replay = "workspace.main:replay"
test = "workspace.main:test"
run_with_trigger = "workspace.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
